# server/accounts/accounts.controller.js
@@ -7,51 +7,25 @@ const authorize = require('_middleware/authorize')
 const accountService = require('./account.service');
 
 // routes
-router.post('/authenticate', authenticateSchema, authenticate);
-router.get('/google-auth', googleAuthentication);
-router.post('/register', registerSchema, register);
+router.post('/join', joinSchema, join);
 router.get('/all', getAll);
 router.get('/logged', authorize(), getLogged);
 router.get('/:id', getById);
-router.put('/', authorize(), updateSchema, update);
 router.delete('/:id', authorize(), _delete);
 
 module.exports = router;
 
-function authenticateSchema(req, res, next) {
+function joinSchema(req, res, next) {
     const schema = Joi.object({
-        userName: Joi.string().required(),
-        password: Joi.string().required()
-    });
-    validateRequest(req, next, schema);
-}
-
-function googleAuthentication(req, res, next) {
-    const { code } = req.body
-    console.log(req)
-    accountService.googleAuth(code)
-        .then(account => res.json(account))
-        .catch(next);
-}
-
-function authenticate(req, res, next) {
-    accountService.authenticate(req.body)
-        .then(account => res.json(account))
-        .catch(next);
-}
-
-function registerSchema(req, res, next) {
-    const schema = Joi.object({
-        userName: Joi.string().required(),
-        password: Joi.string().min(6).required(),
+        email: Joi.string().required(),
         role: Joi.string().required()
     });
     validateRequest(req, next, schema);
 }
 
-function register(req, res, next) {
-    accountService.create(req.body)
-        .then(() => res.json({ message: 'account registrado con éxito' }))
+function join(req, res, next) {
+    accountService.join(req.body)
+        .then(token => res.json(token))
         .catch(next);
 }
 
@@ -67,20 +41,6 @@ function getAll(req, res, next) {
 
 function getById(req, res, next) {
     accountService.getById(req.params.id)
-        .then(account => res.json(account))
-        .catch(next);
-}
-
-function updateSchema(req, res, next) {
-    const schema = Joi.object({
-        userName: Joi.string().empty(''),
-        password: Joi.string().min(6).empty('')
-    });
-    validateRequest(req, next, schema);
-}
-
-function update(req, res, next) {
-    accountService.update(req.user.sub, req.body)
         .then(account => res.json(account))
         .catch(next);
 }
