# server/swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Node.js Sign-up and Verification API
-  description: Node.js + MySQL - API with userName sign-up, verification, authentication and forgot password
+  description: Node.js + MySQL - API with email sign-up, verification, authentication and forgot password
   version: 1.0.0
 
 servers:
@@ -21,14 +21,14 @@ paths:
             schema:
               type: object
               properties:
-                userName:
+                email:
                   type: string
                   example: "jason@example.com"
                 password:
                   type: string
                   example: "pass123"
               required:
-                - userName
+                - email
                 - password
       responses:
         "200":
@@ -56,7 +56,7 @@ paths:
                   lastName:
                     type: string
                     example: "Watmore"
-                  userName:
+                  email:
                     type: string
                     example: "jason@example.com"
                   role:
@@ -72,7 +72,7 @@ paths:
                     type: string
                     example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiI1ZWIxMmUxOTdlMDZhNzZjY2RlZmMxMjEiLCJpZCI6IjVlYjEyZTE5N2UwNmE3NmNjZGVmYzEyMSIsImlhdCI6MTU4ODc1ODE1N30.xR9H0STbFOpSkuGA9jHNZOJ6eS7umHHqKRhI807YT1Y"
         "400":
-          description: The userName or password is incorrect
+          description: The email or password is incorrect
           content:
             application/json:
               schema:
@@ -80,7 +80,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "userName or password is incorrect"
+                    example: "email or password is incorrect"
   /accounts/refresh-token:
     post:
       summary: Use a refresh token to generate a new JWT token and a new refresh token
@@ -119,7 +119,7 @@ paths:
                   lastName:
                     type: string
                     example: "Watmore"
-                  userName:
+                  email:
                     type: string
                     example: "jason@example.com"
                   role:
@@ -192,7 +192,7 @@ paths:
           $ref: "#/components/responses/UnauthorizedError"
   /accounts/register:
     post:
-      summary: Register a new user account and send a verification userName
+      summary: Register a new user account and send a verification email
       description: The first account registered in the system is assigned the `Admin` role, other accounts are assigned the `User` role.
       operationId: register
       requestBody:
@@ -211,7 +211,7 @@ paths:
                 lastName:
                   type: string
                   example: "Watmore"
-                userName:
+                email:
                   type: string
                   example: "jason@example.com"
                 password:
@@ -226,13 +226,13 @@ paths:
                 - title
                 - firstName
                 - lastName
-                - userName
+                - email
                 - password
                 - confirmPassword
                 - acceptTerms
       responses:
         "200":
-          description: The registration request was successful and a verification userName has been sent to the specified userName address
+          description: The registration request was successful and a verification email has been sent to the specified email address
           content:
             application/json:
               schema:
@@ -240,11 +240,11 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "Registration successful, please check your userName for verification instructions"
-  /accounts/verify-userName:
+                    example: "Registration successful, please check your email for verification instructions"
+  /accounts/verify-email:
     post:
-      summary: Verify a new account with a verification token received by userName after registration
-      operationId: verifyuserName
+      summary: Verify a new account with a verification token received by email after registration
+      operationId: verifyemail
       requestBody:
         required: true
         content:
@@ -280,7 +280,7 @@ paths:
                     example: "Verification failed"
   /accounts/forgot-password:
     post:
-      summary: Submit userName address to reset the password on an account
+      summary: Submit email address to reset the password on an account
       operationId: forgotPassword
       requestBody:
         required: true
@@ -289,14 +289,14 @@ paths:
             schema:
               type: object
               properties:
-                userName:
+                email:
                   type: string
                   example: "jason@example.com"
               required:
-                - userName
+                - email
       responses:
         "200":
-          description: The request was received and an userName has been sent to the specified address with password reset instructions (if the userName address is associated with an account)
+          description: The request was received and an email has been sent to the specified address with password reset instructions (if the email address is associated with an account)
           content:
             application/json:
               schema:
@@ -304,10 +304,10 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "Please check your userName for password reset instructions"
+                    example: "Please check your email for password reset instructions"
   /accounts/validate-reset-token:
     post:
-      summary: Validate the reset password token received by userName after submitting to the /accounts/forgot-password route
+      summary: Validate the reset password token received by email after submitting to the /accounts/forgot-password route
       operationId: validateResetToken
       requestBody:
         required: true
@@ -416,7 +416,7 @@ paths:
                     lastName:
                       type: string
                       example: "Watmore"
-                    userName:
+                    email:
                       type: string
                       example: "jason@example.com"
                     role:
@@ -452,7 +452,7 @@ paths:
                 lastName:
                   type: string
                   example: "Watmore"
-                userName:
+                email:
                   type: string
                   example: "jason@example.com"
                 password:
@@ -468,7 +468,7 @@ paths:
                 - title
                 - firstName
                 - lastName
-                - userName
+                - email
                 - password
                 - confirmPassword
                 - role
@@ -492,7 +492,7 @@ paths:
                   lastName:
                     type: string
                     example: "Watmore"
-                  userName:
+                  email:
                     type: string
                     example: "jason@example.com"
                   role:
@@ -502,7 +502,7 @@ paths:
                     type: string
                     example: "2020-05-05T09:12:57.848Z"
         "400":
-          description: userName is already registered
+          description: email is already registered
           content:
             application/json:
               schema:
@@ -510,7 +510,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "userName 'jason@example.com' is already registered"
+                    example: "email 'jason@example.com' is already registered"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
   /accounts/{id}:
@@ -548,7 +548,7 @@ paths:
                   lastName:
                     type: string
                     example: "Watmore"
-                  userName:
+                  email:
                     type: string
                     example: "jason@example.com"
                   role:
@@ -586,7 +586,7 @@ paths:
                 lastName:
                   type: string
                   example: "Watmore"
-                userName:
+                email:
                   type: string
                   example: "jason@example.com"
                 password:
@@ -618,7 +618,7 @@ paths:
                   lastName:
                     type: string
                     example: "Watmore"
-                  userName:
+                  email:
                     type: string
                     example: "jason@example.com"
                   role:
